handle package type 1d2301

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
                 case '1d2201':
                   r.read(43);
                   break;
+                case '1d2301':
+                  r.read(44);
+                  break;
                 case 'a00201':
                   r.read(11);
                   break;
